--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		{
             alert("Welcome "+log);
 
-			window.location.href="https://github.com/nutansonale/"
+			window.location.href="https://nutansonale.github.io/resume.html"
 		}
 		else
 		{
