--- a/resume.html
+++ b/resume.html
@@ -11,12 +11,10 @@
 <body style="overflow:hidden;background-color: #828689;">
 
 
-    <div class="embed-responsive embed-responsive-21by9">
-        <embed class="embed-responsive-item" src="https://nutansonale.github.io/Nutan's_resume.pdf" allowfullscreen></embed>
+    <div >
+        <iframe  src="https://nutansonale.github.io/Nutan's_resume.pdf" allowfullscreen style="position:absolute; width: 100%; height: 100%;"></iframe>
       </div>
-      <div>
-          <h3 class="text-center text-white">Nutan's Resume</h3>
-      </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
