--- a/resume.html
+++ b/resume.html
@@ -14,6 +14,9 @@
     <div >
         <iframe  src="https://nutansonale.github.io/Nutan's_resume.pdf" allowfullscreen style="position:absolute; width: 100%; height: 100%;"></iframe>
       </div>
+        <div >
+        <iframe  src="https://drive.google.com/file/d/1kDEope-UBO3gfC7pjWheGytqDNtPh0XV/preview" allowfullscreen style="position:absolute; width: 100%; height: 100%;"></iframe>
+      </div>
 
 
 
